# Pico-Probe-Hackathon-Submission

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  FINAL_SUMMARY_UPDATE.md  INCOMPLETE.md  LOCAL_FIX_NOTES.md  PATCH_NOTES_3.1.md  README.md  RUN_PICO_PROBE_3_2.md  TEST_REPORT.md  TEST_RESULTS.txt  VALIDATION_RESEARCH_RUNS.json  alembic.ini  docker-compose.demo.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  start.py
.github/workflows/: backend.yml
alembic/: env.py
alembic/versions/: 20260718_0001_launch_schema.py  (+4 more)
docs/: ARCHITECTURE.md  ASSURANCE_CONTRACT.md  BILLING.md  BRAND_AND_DOMAIN.md  BUILD_WEEK_BEFORE_AFTER.md  DEMO_SCRIPT.md  GOLDEN_RESEARCH_FLOW.md  OLLAMA_SETUP.md  PICO_PROBE_3_2_RELEASE_NOTES.md  PIPELINES.md  PLUGINS.md  PROVIDERS.md  RELEASE_CHECKLIST.md  SECURITY.md  SUBMISSION.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  (+4 more)
migrations/: 001_initial.sql  002_indexes.sql  003_launch_subsystems.sql  004_account_security.sql  005_provider_execution.sql  006_signed_plugins.sql  007_security_audit.sql  008_payment_reconciliation.sql  009_provider_idempotency.sql  010_research_compilation.sql  011_pipeline_messages_ollama.sql
orchestra/: config.py
scripts/: migrate.py  validate_environment.py
tests/: conftest.py  test_account_security.py  test_api.py  test_core.py  test_domain.py  test_integration.py  test_launch_subsystems.py  test_production_completion.py  test_research_complete_kernel.py  test_submission_experience.py
(+76 files in other folders)
