[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orchestra-ai-epistemic-kernel"
version = "3.2.0"
requires-python = ">=3.11,<3.14"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.34",
  "pydantic>=2.10",
  "cryptography>=44",
  "httpx>=0.27",
  "sympy>=1.13",
  "email-validator>=2.2",
  "python-dotenv>=1.1",
  "python-multipart>=0.0.20",
  "SQLAlchemy>=2.0.51,<2.1",
  "alembic>=1.16,<2",
  "psycopg[binary]>=3.2,<4",
  "redis>=6,<7",
  "stripe>=12,<15",
  "Authlib>=1.6,<2",
  "PyJWT[crypto]>=2.10,<3",
  "boto3>=1.40,<2",
  "google-cloud-secret-manager>=2.24,<3",
  "azure-identity>=1.23,<2",
  "azure-keyvault-secrets>=4.10,<5",
  "defusedxml>=0.7,<1",
]

[tool.setuptools.packages.find]
include = ["orchestra*", "desktop*"]
exclude = ["frontend*", "migrations*", "alembic*", "tests*", "docs*"]
namespaces = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = ["ollama_live: requires an explicitly enabled local Ollama service and installed model"]

[tool.ruff]
line-length = 180
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501", "E701", "E702", "UP031", "UP042"]
